<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".controller.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/button1"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:text="@string/button1"
                android:textSize="16sp"
                app:backgroundTint="@color/blue"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:text="@string/button2"
                android:textSize="16sp"
                app:backgroundTint="@color/blue"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:text="@string/button3"
                android:textSize="16sp"
                app:backgroundTint="@color/blue"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:text="@string/button4"
                android:textSize="16sp"
                app:backgroundTint="@color/blue"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:text="@string/button5"
                android:textSize="16sp"
                app:backgroundTint="@color/blue"
                app:cornerRadius="15dp" />


            <Button
                android:id="@+id/button6"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:text="@string/button6"
                android:textSize="16sp"
                app:backgroundTint="@color/blue"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginTop="16dp"
                android:text="@string/button7"
                android:textSize="16sp"
                app:backgroundTint="@color/blue"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="20dp"
                android:text="@string/button8"
                android:textSize="16sp"
                app:backgroundTint="@color/blue"
                app:cornerRadius="15dp" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>