<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".controller.AufgabeActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/aufgabeAnzeigenToolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/orange"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/aufgabeAnzeigenView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/aufgabeAnzeigen"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />



    <TextView
        android:id="@+id/dropDownFirst_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/aufgabeAnzeigenToolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="50dp"
        android:text="@string/aufgabenGeordnet"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/aufgabeZuordnung"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_below="@+id/dropDownFirst_top"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@android:drawable/btn_dropdown" />


    <Button
        android:id="@+id/filternButton"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_below="@id/aufgabeZuordnung"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:onClick="ergebnisAnzeigen"
        android:text="@string/filtern"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:backgroundTint="@color/blue"
        app:cornerRadius="15dp" />


    <Button
        android:id="@+id/aufgabeErstellenButton"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_below="@id/filternButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:onClick="aufgabeErstellenAnzeigen"
        android:text="@string/button9"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:backgroundTint="@color/blue"
        app:cornerRadius="15dp">

    </Button>


    <Button
        android:id="@+id/alleAufgaben"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_below="@id/aufgabeErstellenButton"
        android:text="@string/alleAufgaben"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:backgroundTint="@color/blue"
        app:cornerRadius="15dp"
        android:onClick="alleAufgabenAnzeigen"/>

</RelativeLayout>