<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".controller.AlleAufgabenActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ergebnisToolbarAlleAufgaben"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/orange"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/headingViewAlleAufgaben"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/alleAufgaben"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/backAlleAufgaben"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10sp"
        android:onClick="zurueckAlleAufgaben"
        app:srcCompat="@drawable/ic_back" />


    <TextView
        android:id="@+id/aufgabeListeTitel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ergebnisToolbarAlleAufgaben"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/suchenTitelAlleAufgaben"
        android:textColor="@color/orange"
        android:textSize="23sp"
        android:textStyle="italic" />

    <LinearLayout
        android:id="@+id/punktestandLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aufgabeListeTitel"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/punktestand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/empty"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/punktestandLayout"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp">

        <LinearLayout
            android:id="@+id/parentLayoutAlleAufgaben"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

        </LinearLayout>

    </ScrollView>

</RelativeLayout>