<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mitgliedHinzufuegen"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/orange"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/mitgliedHinzufuegenView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/mitgliedHinzufuegen"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="90dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <ImageView
                    app:srcCompat="@drawable/ic_person"
                    android:layout_width="60dp"
                    android:layout_height="80dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="1dp"
                    app:hintAnimationEnabled="false"
                    app:hintTextColor="@color/orange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vorname"
                    android:paddingTop="5dp"
                    android:focusableInTouchMode="true"
                    android:defaultFocusHighlightEnabled="false"
                    android:focusedByDefault="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/vornameField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:maxLines="1"
                        android:textSize="18sp"
                        android:focusedByDefault="false"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <ImageView
                    app:srcCompat="@drawable/ic_person"
                    android:layout_width="60dp"
                    android:layout_height="80dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="1dp"
                    app:hintAnimationEnabled="false"
                    app:hintTextColor="@color/orange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nachname"
                    android:paddingTop="5dp"
                    android:focusableInTouchMode="true"
                    android:defaultFocusHighlightEnabled="false"
                    android:focusedByDefault="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nachnameField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:maxLines="1"
                        android:textSize="18sp"
                        android:defaultFocusHighlightEnabled="false"
                        android:focusedByDefault="false"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <ImageView
                    app:srcCompat="@drawable/ic_email"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:paddingLeft="5dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="1dp"
                    app:hintAnimationEnabled="false"
                    app:hintTextColor="@color/orange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:paddingTop="5dp"
                    android:focusableInTouchMode="true"
                    android:defaultFocusHighlightEnabled="false"
                    android:focusedByDefault="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:maxLines="1"
                        android:textSize="18sp"
                        android:defaultFocusHighlightEnabled="false"
                        android:focusedByDefault="false"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/bestaetigenButton"
                android:layout_width="170dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="45dp"
                android:text="@string/bestaetigen"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:backgroundTint="@color/blue"
                app:cornerRadius="15dp" />

        </LinearLayout>



</RelativeLayout>